[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cerebras"
version = "0.2.0"
description = "Plugin for LLM adding fast Cerebras inference API support"
readme = "README.md"
authors = [
    {name = "Thomas (Thomasthomas) Hughes"},
    {name = "Radosław Stachowiak"},
]
license = "Apache-2.0"
classifiers = [
]
dependencies = [
    "llm>=0.30",
    "httpx",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/irthomasthomas/llm-cerebras"
Changelog = "https://github.com/irthomasthomas/llm-cerebras/releases"
Issues = "https://github.com/irthomasthomas/llm-cerebras/issues"

[project.entry-points.llm]
cerebras = "llm_cerebras.cerebras"

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "user: marks tests as user workflow tests (deselect with '-m \"not user\"')"
]
